[metadata]
name = skoolkit
version = attr: skoolkit.VERSION
author = Richard Dymond
author_email = rjdymond@gmail.com
license = GPL-3.0-or-later
url = https://skoolkit.ca
description = A suite of tools for creating disassemblies of ZX Spectrum games
long_description = file: long_description.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development :: Disassemblers
    Topic :: Utilities

[options]
packages = skoolkit
scripts =
    bin2sna.py
    bin2tap.py
    rzxinfo.py
    rzxplay.py
    skool2asm.py
    skool2bin.py
    skool2ctl.py
    skool2html.py
    sna2ctl.py
    sna2img.py
    sna2skool.py
    snapinfo.py
    snapmod.py
    tap2sna.py
    tapinfo.py
    trace.py

[options.package_data]
skoolkit = resources/*
